- Added : Integration of the Easiest Multilanguage originally created by GIJOE (malanciault)
- Added : Addition of Gijoe Remember me hack (malanciault)
- Added : Added a new Database Driver (MySQLi). (young-pee)
- Added : New feature to add/edit/delete blocks positions. (rplima/young-pee)
- Added : New installer (skalpa/wtravel)
- Added : Upgrade script from XOOPS 2.0.18 (m0nty/malanciault)
- Added : Handling HTTP errors automatically on the site. (malanciault/young-pee)
- Added : Creating a random DB prefix in instalation process like mentioned in feature request item #1848819 (real_therplima)
- Added : New default theme : ImpressTheme (malanciault)
- Added : Ability to set & define your sites Privacy Policy from admin/preferences/user settings. (vaughan)
- Added : New function to show warnings. Also added a new css class for that. xoops_warning() (young-pee)
- Added : 4 new System warnigns. 1 for Security and 3 for correct functionality of the system. (young-pee)
- Added : The users can change they personal theme to be display when they change they profile. (young-pee)
- Added : Added debugging functions included in the XOOPS boot process to allow easy output of debugging lines by core and modules developers (include/debug_functions.php) (malanciault)
- Added : Configuration options to turn on or off and configure the Multilanguage on the site (malanciault)
- Added : Integrating some flags image to be used by the multilanguage feature (malanicault)
- Added : A system block to allow users to select their language (real_therplima)
- Added : icms_copyr function to copy a folder an its content (malanciault)
- Added : icms_mkdir function to create a folder (malanciault)
- Added : icms_chmod function to chmode a file or folder (malanciault)

- Changed : The icons of /class/xoopseditor/dhtmlext/images/*.* (sato-san)
- Changed : Theme changes; Link to impressCMS, poweredby.gif (sato-san)
- Changed : Theme image; logo.png with impressCMS-Logo (sato-san)